--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "axios": "^1.11.0",
     "daisyui": "^5.0.19",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "tailwindcss": "^4.1.4"
   },
